--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
+    "owlcarousel": "^1.3.3",
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-load-script": "0.0.6",
+    "react-owl-carousel": "^2.2.0",
     "react-popper": "^0.8.2",
     "react-responsive-modal": "^2.0.0",
     "react-s-alert": "^1.4.1",
